[package]
name = "genetic_planner"
version = "0.4.0"
authors = ["Marco Torsello <md1512@gmail.com>"]

description = "A simple library that use genetic algorithm to resolve planning problems"
homepage = "https://github.com/md1512/genetic_planner"
repository = "https://github.com/md1512/genetic_planner"
documentation = "https://md1512.github.io/genetic_planner/genetic_planner/"
license = "LGPL-3.0"
keywords =["genetic","planner","ia"]

[dependencies]
rand = "0.3.14"
threadpool ="1.3.2"
